# openai-cli

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/libs/: api_client.rs  config.rs
